# Review-cycle

./: .gitignore  App  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
App/: CMakeLists.txt  main  main.cpp
App/data/: reviewers.txt  students.txt
Lib/: CMakeLists.txt  Makefile  cmake_install.cmake
Lib/include/: assignment.hpp  img_member.hpp  reviewer.hpp  student.hpp
Lib/src/: assignment.cpp  img_member.cpp  reviewer.cpp  student.cpp
data/: assignments.txt  students.txt
declaration/: assignment.hpp  img_member.hpp  reviewer.hpp  student.hpp
